<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:onClick="hideKeyboard">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:onClick="hideKeyboard"
        android:layout_weight="20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/tv_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/teamviewerbutton"
                android:onClick="tvClick"
                android:visibility="gone"
                app:srcCompat="@drawable/teamviewer" />

            <ImageButton
                android:id="@+id/ad_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/anydeskbutton"
                android:onClick="adClick"
                android:visibility="gone"
                app:srcCompat="@drawable/anydesk" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/helpText" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/logo" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="@string/copyright"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/close_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/closebutton"
            android:onClick="closeClick"
            android:visibility="visible"
            app:srcCompat="@android:drawable/ic_delete" />

    </LinearLayout>
</LinearLayout>